--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	   			<h5></h5>
 	   			<h1>Sneha A</h1>
 	   			<p class="intro-position">
-	   				<span>ELECTRIC AND ELECTRONICS ENGINEER</span>
-	   				<span>More into the MBA side</span> 
+	   				<span>ELECTRICAL AND ELECTRONICS ENGINEER</span>
+	   				 <span> Inclined Towards MBA</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -86,10 +86,10 @@
    		</div>   		 		
    	</div> <!-- /intro-content --> 
 
-   	<ul class="intro-social">        
+   	<!-- <ul class="intro-social">        
          <li><a href="https://www.facebook.com/vikkas.bhuvanesh"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://twitter.com/Vikkas20"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="https://www.instagram.com/lightning_vikkas007/"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.instagram.com/lightning_vikkas007/"><i class="fa fa-instagram"></i></a></li>  -->
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -109,7 +109,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">An enthusiastic Electrical Engineer, Seeking an opportunity on Power electronics, Energy systems and in related domains that enables the organization to innovate its services as well as personal development.</p>
+   				<p class="lead">An enthusiastic Electrical Engineer, seeking an opportunity in Power electronics, Energy systems and in related domains and enable the organization to innovate its services as well as personal development.</p>
    			</div>   			
 
    		</div>   		
@@ -120,7 +120,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p> Interst to work as a team - have a good leadership quality. Enriched knowledge in embedded and PLC coading.  </p>
+   			<p> Love to work as a team, have good leadership skills and have enriched knowledge in ardino and Python coading.  </p>
 			<br>
    			<ul class="info-list">
    				<li>
@@ -151,7 +151,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Hands on experience with Ardino. Immense knowledge in Energy Systems and Power ELectronics. Went for an implant training to Albe Electronics Services</p>
+   			<p>Hands on experience with Ardino. Immense knowledge in Energy Systems and Power ELectronics. Attended an implant training at Albe Electronics Services</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -232,8 +232,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>ABle Electronics Services, Coimbatore</h4>
-	   					<p>Had a great time in learning about the transmformers and the manufacturing of components for it. Spent 7 days in learning each and every corner of the components and mechanism with the help of all engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc.,</p>
+	   					<h4>Able Electronics Services, Coimbatore</h4>
+	   					<p>Had a great time learning about the transmformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc.,</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -248,10 +248,10 @@
 	   					<h3>Python Programming</h3>
 	   					<p>May 2021 - for a month</p>
 	   				</div>
-
+ 
 	   				<div class="timeline-content">
 	   					<h4>University of Michigan, Coursera</h4>
-	   					<p>Pyhton was one of the most easiest coding language that I was able to learn. This online course went on for a periods on 1 month which helped to code in python proficiently </p>
+	   					<p>Pyhton is one of the easiest programming language that I was able to learn. The course went on for a period of one month and it helped me program proficiently in Python</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -323,7 +323,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Premier Vidyaa Vikash, Coimbatore</h4>
-	   					<p>My stream was physics, chemistry and mathematics(PCM), and i had scored 91$</p>
+	   					<p>My stream was physics, chemistry and mathematics(PCM), and i had scored 91%</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -341,7 +341,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Indian School Salalah, Oman</h4>
-	   					<p>I had scored CGPA of 9.4/10 in the board exam</p>
+	   					<p>I had scored a 94% in Central Board of Secondary Examinations.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -478,12 +478,12 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/Liberty.jpg" alt="Liberty" />
+				     		<img src="images/portfolio/intern.jpg" alt="Liberty" />
 				     	</div>      	
 
 					   <div class="description-box">
 					      <h4>Implant Training</h4>		      
-					      <p>Had a great time in learning about the transmformers and the manufacturing of components for it. Spent 7 days in learning each and every corner of the components and mechanism with the help of all engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc. </p>
+					      <p>Had a great time learning about the transmformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc., </p>
 
 					      <div class="categories">Able Electronics Services</div>			               
 					   </div>
@@ -498,12 +498,12 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
+				     		<img src="images/portfolio/python.jpg" alt="Shutterbug" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Python Programming COurse</h4>		      
-					      <p>Pyhton was one of the most easiest coding language that I was able to learn. This online course went on for a periods on 1 month which helped to code in python proficiently </p>
+					      <h4>Python Programming Course</h4>		      
+					      <p>Pyhton is one of the easiest programming language that I was able to learn. The course went on for a period of one month and it helped me program proficiently in Python</p>
 
 					      <div class="categories">Coursera</div>			               
 					   </div>
