--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
  
 	   				<div class="timeline-content">
 	   					<h4>University of Michigan, Coursera</h4>
-	   					<p>Pyhton is one of the easiest programming language that I was able to learn. The course went on for a period of one month and it helped me program proficiently in Python</p>
+	   					<p>Pyhton is one of the easiest programming language that I've learned. The course went on for a period of one month. And it helped me program proficiently in Python</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -305,7 +305,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Amrita school of engineering</h4>
-	   					<p>Currently in the 6th semester with an CGPA of 7.09</p>
+	   					<p>Currently in the 6th semester with a CGPA of 7.09</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -503,7 +503,7 @@
 
 					   <div class="description-box">
 					      <h4>Python Programming Course</h4>		      
-					      <p>Pyhton is one of the easiest programming language that I was able to learn. The course went on for a period of one month and it helped me program proficiently in Python</p>
+					      <p>Pyhton is one of the easiest programming language that I've learned. The course went on for a period of one month. And it helped me program proficiently in Python</p>
 
 					      <div class="categories">Coursera</div>			               
 					   </div>
@@ -931,7 +931,7 @@
 
    		<div class="col-four tab-full">
 
-   			<div class="icon">
+   			<!-- <div class="icon">
    				<i class="icon-pin"></i>
    			</div>
 
@@ -941,9 +941,9 @@
 			No 9, Aswini Street, Marudha Nagar, Thondamuthur Roda<br>
             Vadavalli <br> 
 			Coimbatore-641041
-            </p>
+            </p> -->
 
-   		</div>
+   		</div> 
 
    		<div class="col-four tab-full collapse">
 
@@ -965,11 +965,11 @@
    				<i class="icon-phone"></i>
    			</div>
 
-   			<h5>Call Me At</h5>
+   			<!-- <h5>Call Me At</h5>
 
    			<p>Phone: +91 75503 91291<br>
 			   	
-			   </p>
+			   </p> -->
 
    		</div>
    		
