--- a/index.html
+++ b/index.html
@@ -961,11 +961,11 @@
 
    		<div class="col-four tab-full">
 
-   			<div class="icon">
+   			<!-- <div class="icon">
    				<i class="icon-phone"></i>
    			</div>
 
-   			<!-- <h5>Call Me At</h5>
+   			<h5>Call Me At</h5>
 
    			<p>Phone: +91 75503 91291<br>
 			   	
