--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p> Love to work as a team, have good leadership skills and have enriched knowledge in ardino and Python coading.  </p>
+   			<p> Love to work as a team, have good leadership skills and have enriched knowledge in ardino and Python coding.  </p>
 			<br>
    			<ul class="info-list">
    				<li>
@@ -232,8 +232,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Able Electronics Services, Coimbatore</h4>
-	   					<p>Had a great time learning about the transmformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc.,</p>
+	   					<h4>ABLE Electronics Services, Coimbatore</h4>
+	   					<p>Had a great time learning about the transformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc.,</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -385,7 +385,7 @@
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">Implant Training Certificate</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Able Electronics Services
+		     					       	  ABLE Electronics Services
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -483,7 +483,7 @@
 
 					   <div class="description-box">
 					      <h4>Implant Training</h4>		      
-					      <p>Had a great time learning about the transmformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc., </p>
+					      <p>Had a great time learning about the transformers and its components. Spent seven days learning and exploring each components with the help of skilled engineers . Learnt the protection mechanism, different types of transmission conductors, protection relays, circuit breakers, transformers, surge arrestors etc., </p>
 
 					      <div class="categories">Able Electronics Services</div>			               
 					   </div>
@@ -503,7 +503,7 @@
 
 					   <div class="description-box">
 					      <h4>Python Programming Course</h4>		      
-					      <p>Pyhton is one of the easiest programming language that I've learned. The course went on for a period of one month. And it helped me program proficiently in Python</p>
+					      <p>Pyhton is one of the easiest programming language that I've learned. The course went on for a period of one month. And it helped me program proficiently in Python </p>
 
 					      <div class="categories">Coursera</div>			               
 					   </div>
