--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Hands on experience with Ardino. Immense knowledge in Energy Systems and Power ELectronics. Attended an implant training at Albe Electronics Services</p>
+   			<p>Hands on experience with Ardino. Immense knowledge in Energy Systems and Power ELectronics. Attended an implant training at ABLE Electronics Services</p>
 
 				<ul class="skill-bars">
 				   <li>
